cmake_minimum_required(VERSION 3.17)
project(COMP_2012_PA1_2020Fall_)

set(CMAKE_CXX_STANDARD 14)

include_directories(.)

add_executable(COMP_2012_PA1_2020Fall_
        Inventory.cpp
        Inventory.h
        Item.cpp
        Item.h
        main1.cpp
        main10.cpp
        main2.cpp
        main3.cpp
        main4.cpp
        main5.cpp
        main6.cpp
        main7.cpp
        main8.cpp
        main9.cpp
        Makefile
        README.md)
